src/objects/ProductImages__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Image_URL__c</fullName>
        <label>Image URL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Label__c</fullName>
        <label>Product Label</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider__c</fullName>
        <label>Provider</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subtitle_1__c</fullName>
        <label>Subtitle 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Subtitle_2__c</fullName>
        <label>Subtitle 2</label>
        <type>TextArea</type>
    </fields>
    <label>Predictive Offers</label>
</CustomObject>